# monky-newbuild

./: .gitmodules  cabal.project  monky-local.cabal
normal/: Main.hs
